--- a/style.css
+++ b/style.css
@@ -95,6 +95,7 @@ h1{
     color: rgb(112, 87, 201);
     font-size: 60px;
     font-weight: bold;
+    margin: 0;
    
    
 }
@@ -102,9 +103,14 @@ h1{
 h2 {
     color:rgb(112, 87, 201);
     font-weight: bolder;
-    font-size: 50px;
+    font-size: 40px;
+
    
 }   
+.saludo h2{
+    font-size: 20px;
+    color: black;
+}
 
 h3{
     color:indigo;
@@ -112,7 +118,7 @@ h3{
     font-size: 25px;
 }
 .descripcion-personal{
-    font-size: 30px;
+    font-size: 20px;
     color: indigo;
 }
 
@@ -288,9 +294,10 @@ padding:10%;
         display:block;
         display:flex;
         justify-content: flex-end;
-        margin-left:25px;
-        margin-top: 25px;
+        margin:0;
         color: indigo;
+        background-color: lightgrey;
+        padding: 10px;
     }
     .barra-navegacion,.links-navegacion-footer{
         display:none;
@@ -305,5 +312,9 @@ padding:10%;
         flex-wrap: wrap;
         margin: 10px;
         
+    }
+    .contenido-encabezado{
+        text-align:center;
+
     }
 }
