--- a/style.css
+++ b/style.css
@@ -56,10 +56,10 @@ a:hover{
 .contenido-encabezado {
     background-color:white;
     display: flex;
-    justify-content: space-around;
     align-items: center;
     justify-content: center;
     height: 100vh;
+    
 }
 .contenedor-avatar{
     width: 60%;
@@ -69,11 +69,9 @@ a:hover{
 
     img{
     width: 100%;
-    height: 100%;
+    height: auto;
     margin:0;
    
-    
-    
     
 }
 
@@ -120,7 +118,7 @@ h3{
     
 }
 p{
-    color:rgb(209,28,91);
+    color:black;
 }
 .descripcion-personal{
     font-size: 20px;
@@ -199,7 +197,7 @@ padding:10%;
     align-items: center;
     list-style-type: none;
     font-size: 15px;
-    padding:0;
+ 
 
 
 }
@@ -229,7 +227,7 @@ padding:10%;
 
 .titulo-proyecto{
     font-size: 15px;
-    color:rgb(209,28,91);
+    color:black;
     
 }
 .boton-proyecto{
@@ -242,7 +240,7 @@ padding:10%;
     padding-bottom: 5px;
     font-size: 15px;
     color:rgb(246,238,213); 
-    margin-right: 20px;
+  
 
 }
 
@@ -250,7 +248,7 @@ padding:10%;
     background-color:white;
     display: flex; 
     flex-wrap: wrap;
-    max-width: 1000px;
+    max-width: 900px;
     justify-content: center;
 
     
@@ -266,11 +264,12 @@ padding:10%;
     border-radius: 10px; 
     align-items: center;
     justify-content:center; 
+  
    
 }
 .img-proyecto{
     width: 100%;
-    height:auto;
+    height:auto
 }
 
 
@@ -377,12 +376,13 @@ padding:10%;
         text-align:center;
         display: flex;
         flex-wrap: wrap;
+        margin-top: 20%;
        
 
     }
     .contenedor-avatar{
         margin-right: 20%;
-        margin-top: 10px;
+        margin-top: 10%;
     }
    
 }
