--- a/style.css
+++ b/style.css
@@ -202,11 +202,11 @@ padding:10%;
 
  }
 .links-navegacion-proyectos{
-    display:flex;
-    justify-content: center;
-    align-items: center;
+   
     list-style-type: none;
-    font-size: 15px;
+    font-size:15px;
+
+    align-items: center;
  
 
 
@@ -216,7 +216,7 @@ padding:10%;
 
     font-size: 20px;
     font-weight: lighter;
-    margin:20px;
+    margin-right: 20px;
     color: rgb(209,28,91);   
 }
 
@@ -228,7 +228,7 @@ padding:10%;
     outline-color:rgb(250,198,0);
     outline-width: 2px;
     color: black;
-    text-align: center;
+    
 }
 
 .links-navegacion-proyectos a:hover{
@@ -250,12 +250,13 @@ padding:10%;
     padding-bottom: 5px;
     font-size: 15px;
     color:rgb(246,238,213); 
+    
   
 
 }
 
 .contenedor-tarjetas-proyectos{
-    background-color:white;
+    background-color:greenyellow;
     display: flex; 
     flex-wrap: wrap;
     max-width: 100%;
@@ -266,7 +267,7 @@ padding:10%;
 
 .tarjeta-proyectos{
     background-color:white;
-   
+   text-align: center;
     width: 250px;
     height:250px;  
     margin:10px;
