--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body{
 
 .link-nav{
 margin-right: 20px; 
+color:rgb(246,238,213);
 }
 .link-nav-contacto {
     border: 5px solid rgb(246,238,213);
@@ -38,18 +39,21 @@ margin-right: 20px;
     margin-right: 70px;
 }
 
-a:visited{
-    color:rgb(246,238,213);
-}
-
 a{
     text-decoration: none;
 }
-a:active{
+.link-nav a:link{
+    color:rgb(246,238,213);
+
+}
+.link-nav a:active{
+    color:rgb(246,238,213);
+}
+.link-nav a:visited{
     color:rgb(246,238,213);
 }
 
-a:hover{
+.link nav a:hover{
     color:rgb(246,238,213);
 }
 
@@ -58,46 +62,44 @@ a:hover{
     display: flex;
     align-items: center;
     justify-content: center;
-    
-    
+    height: 100vh;   
 }
 .contenedor-avatar{
-    width: 60%;
-    height: 60%;
-    
+    width: 70%;
+    height: 70%;
+    margin-bottom: 15%;
+ 
     }
 
     .contenedor-avatar img{
     width: 100%;
-    height: auto;
-    margin-top:15%;
-   
-   
+    height: auto;  
     
 }
+.saludo{
+    margin-left:5%;
 
-.link-conoceme {
-    background-color:rgb(209,28,91);
+    }
+
+.link-loquehago {
+    border: 5px solid rgb(209,28,91);
+    background-color: rgb(209,28,91);
     border-radius: 50px;
-    padding-top: 10px;
+    padding-top: 5px;
     padding-left: 25px;
     padding-right: 25px;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
     font-size: 15px;
-    color:rgb(246,238,213); 
     font-weight:bold;
-    text-decoration: none;
+    color:rgb(246,238,213);
    
 
-      
-}
 
-h1{
+}
+.saludo h1{
     color: rgb(209,28,91);
     font-size: 60px;
-    font-weight: bold;
-    margin: 0;
-   
+    font-weight: bold;    
    
 }
 
@@ -105,8 +107,7 @@ h2 {
     color:rgb(209,28,91);
     font-weight: bolder;
     font-size: 40px;
-
-   
+  
 }   
 .saludo h2{
     font-size: 20px;
@@ -115,7 +116,7 @@ h2 {
 
 
 p{
-    color:black;
+    color:rgb(209,28,91);
 }
 .descripcion-personal{
     font-size: 20px;
@@ -152,9 +153,7 @@ p{
 }
 .tarjeta img{
         width: 100%;
-        height: auto;
-    
-       
+        height: auto;       
     
 }
 .seccion-frase{
@@ -162,17 +161,16 @@ background-color:rgb(209,28,91);
 display: flex;
 flex-direction: column;
 justify-content: center;
-
 align-content: center;
 padding:10%;
  }
+
  .frase{
      font-size: 20px;
      color:rgb(246,238,213);
      text-align: center;
      justify-content: center;
-     padding:50px;
-     
+     padding:50px;   
     
  }
  .autor-frase{
@@ -192,32 +190,31 @@ padding:10%;
  }
 .links-navegacion-proyectos{
     list-style-type: none;
-    font-size:15px;
     display: flex;
-    flex-wrap: wrap;
-    align-items: center;    
+    align-items: center;  
 }
 
-.link-pro, .boton-proyecto{
+.link-pro {
     font-size: 20px;
     font-weight: lighter;
     color: rgb(209,28,91);
     margin:20px;
 }
 
-.links-navegacion-proyectos a:visited{
-    color:rgb(209,28,91);
-}
-.links-navegacion-proyectos a:active{
-    outline-style:solid;
+.link-pro a:active{
+    outline-style: hidden;
     outline-color:rgb(250,198,0);
     outline-width: 2px;
-    color: black;
+    color: rgb(209,28,91);
     text-align: center;
     
 }
+.link-pro a:visited{
+    color:rgb(209,28,91);
+}
+.
 
-.links-navegacion-proyectos a:hover{
+.link-pro a:hover{
     color:rgb(209,28,91);
 }
 
@@ -236,6 +233,7 @@ padding:10%;
     padding-bottom: 5px;
     font-size: 15px;
     color:rgb(246,238,213);
+   
     text-decoration: none;
 
 }
@@ -246,8 +244,7 @@ padding:10%;
     flex-wrap: wrap;
     max-width: 100%;
     justify-content: center;
-    margin:0;
-    
+   
 }
 
 .tarjeta-proyectos{
@@ -293,6 +290,7 @@ padding:10%;
 }
 .link-footer{
     margin-right: 20px;
+    color:rgb(246,238,213);
     
 }
 .link-footer-contacto {
@@ -325,7 +323,7 @@ padding:10%;
     color:red;
 }
 
-@media (max-width:700px){
+@media (max-width:600px){
     .hamburguesa{
         display:block;
         display:flex;
@@ -350,9 +348,9 @@ padding:10%;
     .hamburguesa a:hover{
         color:rgb(246,238,213);
     }
-    
-        
-
+    .saludo h1{
+        font-size: 40px;
+    }
 
     .barra-navegacion,.links-navegacion-footer{
         display:none;
@@ -361,23 +359,34 @@ padding:10%;
         display: flex;
         flex-wrap: wrap;
         text-align:center;
-        margin-top: 20%; 
+        margin-top:10%;
+         
 
     }
     .contenedor-avatar{
-       
         margin-top: 10%;
+    
     }
-    .links-navegacion-proyectos{
-        justify-content: center ;
-       
+
+    .link-pro, .boton-proyecto{
+        font-size: 15px ;
         
     }
     .frase-footer{
         text-align: center;
     }
   
-    
+    .contenedor-tarjetas-proyectos{
+        max-width:600px;
+        display: flex;
+        flex-direction: column;
+        
+    }
+    .tarjeta{
+        width: 50px;
+        height:50px;
+
+    }
    
    
 }
