--- a/style.css
+++ b/style.css
@@ -301,9 +301,11 @@ padding:10%;
     color:rgb(246,238,213);
 
 }
-.color-icon-quotes{
+.icon-quotes{
     color:rgb(246,238,213);
-    
+    text-align:center;
+    font-size: 70px;
+} 
     
     text-align: center;
 }
@@ -351,7 +353,10 @@ padding:10%;
     .saludo h1{
         font-size: 40px;
     }
+    h2{
+        font-size: 20px;
 
+    }
     .barra-navegacion,.links-navegacion-footer{
         display:none;
     }
@@ -364,12 +369,13 @@ padding:10%;
 
     }
     .contenedor-avatar{
-        margin-top: 10%;
+        margin-top: 20%;
     
     }
 
     .link-pro, .boton-proyecto{
-        font-size: 15px ;
+        font-size: 10px;
+        margin-right: 10px;
         
     }
     .frase-footer{
@@ -377,7 +383,7 @@ padding:10%;
     }
   
     .contenedor-tarjetas-proyectos{
-        max-width:600px;
+       
         display: flex;
         flex-direction: column;
         
@@ -387,6 +393,14 @@ padding:10%;
         height:50px;
 
     }
-   
+    .frase{
+        font-size: 12px;
+    }
+    .autor-frase{
+        font-size: 20px;
+    }
+    .icon-quotes{
+        font-size:40px;
+    }
    
 }
