--- a/style.css
+++ b/style.css
@@ -139,6 +139,7 @@ p{
     align-items: center;
     justify-content: center;
     max-width: 950px;
+  
     
 }
 .tarjeta{
@@ -242,8 +243,9 @@ padding:10%;
     background-color:white;
     display: flex; 
     flex-wrap: wrap;
-    max-width: 100%;
     justify-content: center;
+    max-width: 100%;
+    
    
 }
 
@@ -269,7 +271,6 @@ padding:10%;
     align-items: center;
     
 }
-
 
 .pie{
     text-align: center;
@@ -351,7 +352,7 @@ padding:10%;
         color:rgb(246,238,213);
     }
     .saludo h1{
-        font-size: 40px;
+        font-size: 30px;
     }
     h2{
         font-size: 20px;
@@ -372,6 +373,10 @@ padding:10%;
         margin-top: 20%;
     
     }
+    .tarjeta{
+        width:50px;
+        height:50px;
+    }
 
     .link-pro, .boton-proyecto{
         font-size: 10px;
@@ -387,10 +392,6 @@ padding:10%;
         display: flex;
         flex-direction: column;
         
-    }
-    .tarjeta{
-        width: 50px;
-        height:50px;
 
     }
     .frase{
@@ -403,4 +404,14 @@ padding:10%;
         font-size:40px;
     }
    
+    .descripcion-personal{
+        font-size: 10px;
+        margin-bottom: 50px;
+    
+    }
+    tarjeta-proyectos{
+        width: 200px;
+        height: 200px;
+    }
+
 }
