--- a/style.css
+++ b/style.css
@@ -72,7 +72,8 @@ a{
 .contenedor-avatar{
     width: 70%;
     height: 70%;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
+
  }
 
 .contenedor-avatar img{
@@ -95,12 +96,14 @@ a{
     font-size: 15px;
     font-weight:bold;
     color:rgb(246,238,213);
+
 }
 
 .saludo h1{
     color: rgb(209,28,91);
     font-size: 60px;
-    font-weight: bold;      
+    font-weight: bold;  
+    
 }
 
 h2 {
@@ -199,10 +202,12 @@ padding:10%;
     display: flex;
     align-items: center;  
     justify-content: center;
+    
 }
 .links-navegacion-proyectos a:active{
     color: rgb(209,28,91);
-    border: 2px solid gold;   
+    border: 1px solid gold; 
+    border-radius: 5px;  
 }
 .links-navegacion-proyectos a:visited{
     color:rgb(209,28,91);
@@ -214,7 +219,7 @@ padding:10%;
 .link-pro {
     font-size: 20px;
     font-weight: lighter;
-    color: rgb(209,28,91);
+    color: rgb(209,28,91);  
     margin:20px;
 }
 
@@ -251,14 +256,14 @@ padding:10%;
     width: 250px;
     height:250px;  
     margin:10px;
-    border: 1px solid rgb(209,28,91);
+    border: 1px solid gray;
     border-radius: 10px; 
     display:flex;
     flex-direction: column;
     padding:4%;   
 }
 
-.img-proyecto{
+.tarjeta-proyectos img{
     width: 100%;
     height:auto;
     flex-direction: column;
@@ -372,25 +377,28 @@ padding:10%;
     }
 
     .descripcion-personal{
-        font-size: 10px;
+        font-size: 15px;
         margin-bottom: 50px;
     }
     .info-conocimientos{
         font-size:15px;
     }
     .tarjeta{
-        width: 25px;
-        height:25px;
+        width: 20px;
+        height:20px;
         padding:30px;
     }
 
     .titulo-tarjeta{
-        font-size: 10px;
+        font-size: 5px;
     
+    }
+    .links-navegacion-proyectos{
+        margin-right: 50px;
     }
     .link-pro, .boton-proyecto{
         font-size: 10px;
-        margin-right: 1px;   
+        margin: 5px;   
     }
 
     .tarjeta-proyectos{
@@ -398,9 +406,8 @@ padding:10%;
         height:200px;
         padding:20%;
     }
-.links-navegacion-proyectos{
-    text-align:center;
-}
+
+
     .frase{
         font-size: 15px;
     }
