--- a/style.css
+++ b/style.css
@@ -96,13 +96,15 @@ a{
     font-size: 15px;
     font-weight:bold;
     color:rgb(246,238,213);
+    margin-top:20px;
 
 }
 
 .saludo h1{
     color: rgb(209,28,91);
     font-size: 60px;
-    font-weight: bold;  
+    font-weight: bold; 
+   
     
 }
 
@@ -110,6 +112,7 @@ h2 {
     color:rgb(209,28,91);
     font-weight: bolder;
     font-size: 40px; 
+  
 }   
 
 .saludo h2{
@@ -120,6 +123,7 @@ h2 {
 .descripcion-personal{
     font-size: 20px;
     color:black;
+  
 }
 
 .conocimientos{
@@ -146,9 +150,9 @@ h2 {
 .tarjeta{
     background-color:white;
     padding:60px;
-    width: 130px;
-    height:130px;  
-    margin:20px;
+    width: 100px;
+    height:100px;  
+    margin:10px;
     border: 1px solid rgb(209,28,91);
     border-radius: 10px; 
     text-align: center;
