--- a/style.css
+++ b/style.css
@@ -19,42 +19,11 @@ a{
     font-size: 15px;  
     height: 100px;
     margin-top:0px;
+   
 
 }
-.menu-responsive{ 
-background-color: pink; 
-position:relative;
-width: 100%;
-transition:1s;
-transform:translateY(-200px);
-border-radius: 5px;
-padding:1px;
-
-}
-.menu-responsive ul{
-    padding-right:5px;
-}
-.links {
-padding: 2px;
-}
-.menu-responsive a:link{
-    color:rgb(209,28,91);
-}
-
-.menu-responsive a:active{
-    color:rgb(209,28,91);
-}
-
-.menu-responsive a:visited{
-    color:rgb(209,28,91);
-}
-
-.menu-responsive a:hover{
-    color:rgb(209,28,91);
-}
-
-.mostrar-menu{
-    transform:translateY(0px);
+.menu-responsive{
+    display: none;
 }
 .hamburguesa{
     display: none;  
@@ -66,7 +35,7 @@ padding: 2px;
 }
 
 .link-nav{
-margin-right: 20px; 
+margin-right: 30px; 
 color:rgb(246,238,213);
 }
 
@@ -74,10 +43,11 @@ color:rgb(246,238,213);
     border: 5px solid rgb(246,238,213);
     background-color: rgb(246,238,213);
     border-radius: 50px;
+    padding-top:5px;
+    padding-bottom: 5px;
+    padding-left:15px;
+    padding-right:15px;
 
-    padding-left: 25px;
-    padding-right: 25px;
-  
     font-size: 15px;
     color:rgb(209,28,91); 
     margin-right: 70px;
@@ -102,7 +72,7 @@ color:rgb(246,238,213);
 }
 
 .contenido-encabezado {
-  
+    margin-top: 0;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -382,6 +352,18 @@ padding:10%;
 .hidden{
     display:none;
 }
+@media (min-width:900px) and (max-width:1400px){
+    .barra-navegacion {
+        font-size: 25px;  
+        height: 200px;
+        margin-top:0px;
+    }
+    
+    .contenedor-avatar{
+        height: 20%;
+        margin-bottom: 2%;
+    }
+}
 @media (min-width:600px) and (max-width:900px){
     .contenido-encabezado{
         /* no es necesario repetir display flex aqui! */
@@ -429,6 +411,44 @@ padding:10%;
     .hamburguesa a:hover{
         color:rgb(246,238,213);
     }
+    .menu-responsive{ 
+        display: block;
+        background-color: pink; 
+        position:relative;
+        width: 100%;
+        transition:1s;
+        transform:translateY(-300px);
+        border-radius: 5px;
+        padding:1px;
+        
+        
+        
+        }
+        .menu-responsive ul{
+            padding-right:5px;
+        }
+        .links {
+        padding: 2px;
+        }
+        .menu-responsive a:link{
+            color:rgb(209,28,91);
+        }
+        
+        .menu-responsive a:active{
+            color:rgb(209,28,91);
+        }
+        
+        .menu-responsive a:visited{
+            color:rgb(209,28,91);
+        }
+        
+        .menu-responsive a:hover{
+            color:rgb(209,28,91);
+        }
+        
+        .mostrar-menu{
+            transform:translateY(0px);
+        }
 
     .saludo h1{
         font-size: 40px;
@@ -446,7 +466,7 @@ padding:10%;
         display: flex;
         flex-wrap: wrap;
         text-align:center;
-        margin-top:0;    
+           
     }
 
     .contenedor-avatar{
